kustomize/overlays/biosim-rke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  labels:
    app: api-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  tls:
      - hosts:
          - rke-cp-01.cam.uchc.edu
        secretName: letsencrypt-prod-api-tls
  rules:
  - host: rke-cp-01.cam.uchc.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8000
